{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "4ab8c8c9-4455-4df4-9099-582c66173308",
            "actions": [
                {
                    "name": "P1Movement",
                    "type": "Button",
                    "id": "335e8e75-0b1e-4c8f-ab42-8eeca9205e9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "P2Movement",
                    "type": "Button",
                    "id": "fbf4607c-bdda-4890-b2c7-bd274f21129d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "P1Interact",
                    "type": "Button",
                    "id": "ef8b07b6-038a-4cf4-8c78-ba5beadcde39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "P2Interact",
                    "type": "Button",
                    "id": "fb4fddb9-7d5d-4431-a981-6def72174631",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "f1b51b96-d5f6-4edd-b1f4-647add3eb852",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "80201dc4-cccd-4c49-b937-42a2af896bcd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fcbff69d-2c6f-45e6-8622-431e0586cd64",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "029bfea6-84df-4403-825a-ed38f59d59db",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "52ca0988-de19-47cb-83f1-670d2aa2abf9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "IJKL",
                    "id": "8a33a3fd-0505-406d-aace-7974d4545fc1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0809938d-5def-42fa-a9a9-d5f9a5d795ab",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c81967be-ab53-417c-8b92-7d7cdd472a7d",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c0e7cb20-3bdf-4174-a5c4-60402c90e8ca",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cf9642aa-a7e9-464b-8e62-da91435dc467",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f9ea619e-aaa4-4260-842a-49cdfcfa5b97",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71459885-6014-4989-91e4-31e4a0c3bb24",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}